chore: add secure password fonction
